tests/lit/yalang/syntax/errors/assignment_into_unknown_var.ya
// RUN: @compiler --emit yair @file

func : function() : f32 {
    // CHECK: Unknown identifier 'var' used in assignment
    var = 13.0;
    return var;
}
